# Multi-Help-Discord-Bot

./: backup.txt  keep_alive.py  main.py  name.json  prefixes.json  pyproject.toml
ApiWork/: CoolCmds.py  animals.py  animequote.py  covid.py  encoder.py  github.py  imageswitheffects.py  joke.py  meme.py
CommandS/BotCmd/: Helpcommands.py  _my_Bot_error_handler.py  common_cmd.py  dmcmd.py  dump.py  emojify.py  moderation.py  pagtime.py  servercmd.py  support_Service.py  try_eval.py
CommandS/GameCmds/: 8ball.py  fortnite.py  pokemon.py
PilImages/: comment.py  imposter.py  imran.py  pewds.py  rip.py  shoot.py  slap.py  wanted.py
RedditMeme/: rmeme.py
static/: styles.css
templates/: index.html
