[tool.poetry]
name = "hello-there-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
discord = "^1.0.1"
praw = "^7.1.0"
replit = "^2.0.0"
pychalk = "^2.0.1"
utils = "^1.0.1"
django-environ = "^0.4.5"
wikipedia = "^1.4.0"
db = "^0.1.1"
discord-ext-slash = "^0.4.0"
discord-py-slash-command = "^1.0.9"
pyshorteners = "^1.0.1"
prsaw = "^0.2.0"
DiscordUtils = "^1.2.8"
lxml = "^4.6.3"
discord-components = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
